--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <header class="detail-header">
-        <h1>Post Detail</h1>
+        <h1 class="brand-title">Post Detail</h1>
         <a href="/">Back</a>
       </header>
 
