--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,8 @@
         <input name="password" type="password" required />
         <button type="submit">Login</button>
       </form>
-      <p><a href="/">Back</a></p>
+      <p>Don't have an account? <a href="/register">Register here</a></p>
+      <p><a href="/">Back to home</a></p>
     </div>
     <script src="/static/script.js"></script>
   </body>
