--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -35,6 +35,7 @@
       <% } %>
 
       <form id="editPostForm" action="/entries/<%= entry.id %>/edit" method="post" enctype="multipart/form-data" class="upload-form">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <label>Add photos (optional, up to <%= maxImagesPerPost %> total)</label>
         <input type="file" name="photos" accept="image/*" multiple />
         <div class="upload-preview" id="uploadPreview" hidden>
