--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,6 +27,7 @@
         <p class="success-note"><%= info %></p>
       <% } %>
       <form class="auth-form" action="/register" method="post">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <label>Username</label>
         <input name="username" value="<%= username || '' %>" required />
         <label>Email</label>
